# HydroSphere

./: app.py  graph.py  llm.py  main.py  pyproject.toml  requirements.txt  state.py
agents/: agriculture.py  decision.py  reservoir.py  risk.py  urban.py  weather.py
data/: mock_data.json
