[project]
name = "code"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "streamlit>=1.59.1",
]
